# model-finetuner

./: .editorconfig  .gitignore  DOCS.md  README.md  config.example.json  download_dataset.py  finetune.sh  golden.sh  hp_search.py  message.txt  pyproject.toml  requirements-dev.lock.txt  requirements-linux.lock.txt  run_hp_search.sh  run_predefined_finetune.sh  search.sh  setup.sh  setup_a6000.sh  tmux.sh  train.py  watch_golden.sh
common/: app_config.py  discord_utils.py  jsonc_utils.py  notify_cli.py  training_core.py
script/: benchmark_attention.py  download_dataset.py  hp_search.py  regenerate_confusion_matrix.py  train.py  upload_finetune_output.py
script/common/: __init__.py  app_config.py  confusion_matrix_plot.py  hf_upload.py  notify_cli.py  training_core.py  wandb_utils.py
