[project]
name = "model-finetuner"
version = "0.1.0"
description = "Training pipeline for AI Model fine-tuning and HP search"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "accelerate>=1.0,<2.0",
  "datasets>=3.0,<4.0",
  "hf_transfer>=0.1",
  "huggingface_hub>=0.25",
  "matplotlib>=3.8",
  "optuna>=3.6",
  "pillow>=10.0",
  "requests>=2.32",
  "scikit-learn>=1.4",
  "seaborn>=0.13",
  "torch>=2.10,<2.11",
  "transformers>=5.2,<6.0",
  "trl==0.22.2",
  "unsloth>=2026.4.4",
  "wandb>=0.19",
]

[project.optional-dependencies]
train-linux = ["unsloth[cu128-torch2100] ; platform_system == 'Linux'"]
dev = ["pytest>=8.3", "ruff>=0.6"]

[tool.ruff.lint]
# Unsloth must patch Transformers/PEFT before they are imported.
isort = { force-to-top = ["unsloth"] }
